--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Orlando Recycle</string>
+    <string name="logout">Logout</string>
+    <string name="settings">Settings</string>
+    <string name="home">Home</string>
+    <string name="navigation_drawer_close">Close Navigation</string>
+    <string name="navigation_drawer_open">Open Navigation</string>
 </resources>
