--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Orlando Recycle</string>
+    <string name="app_name" translatable="false">Orlando Recycle</string>
     <string name="logout">Logout</string>
     <string name="settings">Settings</string>
     <string name="home">Home</string>
@@ -16,4 +16,13 @@
     <string name="calendar">Calendar</string>
     <string name="history">History</string>
     <string name="scan_button">Scan Button</string>
+    <string name="monthly">Monthly</string>
+    <string name="weekly">Weekly</string>
+    <string name="yearly">Yearly</string>
+    <string name="progress">Progress</string>
+    <string name="glass">Glass</string>
+    <string name="plastic">Plastic</string>
+    <string name="cardboard">Cardboard</string>
+    <string name="material">Material</string>
+    <string name="water_bottle">Water Bottle</string>
 </resources>
