set click listener for forgot password and make it a bottomsheet fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="login">Login</string>
     <string name="forgot_password_question">Forgot password?</string>
     <string name="remember_me">Remember me</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_up">Sign up</string>
 </resources>
