--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
 
     <string name="agree_with">Agree with </string>
     <string name="terms_conditions">Terms &amp; Conditions</string>
-    <string name="already_have_an_account_login">Already have an account? <b>Login</b></string>
+    <string name="already_have_an_account_login">Already have an account?</string>
     <string name="create_account">Create Account</string>
     <string name="create_an_account">Create an Account</string>
     <string name="full_name">Full Name</string>
@@ -79,4 +79,7 @@
     <string name="submit">Submit</string>
     <string name="address">Address</string>
     <string name="password">Password</string>
+    <string name="made_with_by_valencia_ctsd">Made with ❤️ by Valencia CTSD</string>
+    <string name="registration">Registration</string>
+    <string name="profile">Profile</string>
 </resources>
