make logo in welcome screen same size as button and field. Fix warning message in map class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     <string name="submit">Submit</string>
     <string name="address">Address</string>
     <string name="password">Password</string>
-    <string name="made_with_by_valencia_ctsd">Made with ❤️ by Valencia CTSD</string>
+    <string name="made_with_by_valencia_ctsd">Made with ❤️ by Valencia College CTSD</string>
     <string name="registration">Registration</string>
     <string name="profile">Profile</string>
 </resources>
