--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,9 @@
     <string name="made_with_by_valencia_ctsd">Made with ❤️ by Valencia College CTSD</string>
     <string name="registration">Registration</string>
     <string name="profile">Profile</string>
+    <string name="copyright">©</string>
+    <string name="year">2024</string>
+    <string name="city_of_orlando">City of Orlando</string>
+    <string name="most_frequent_searches">Most Frequent</string>
+    <string name="search_the_name_of_a_waste_item_and_we_ll_tell_you_how_to_recycle_or_dispose_of_it">Search the name of a waste item and we\'ll tell you how to recycle or dispose of it</string>
 </resources>
