--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,8 @@
     <string name="remember_me">Remember me</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="sign_up">Sign up</string>
-
+    <string name="channel_id">Send Notification</string>
+    <string name="channel_description">This button sends a notification</string>
     <string name="agree_with">Agree with </string>
     <string name="terms_conditions">Terms &amp; Conditions</string>
     <string name="already_have_an_account_login">Already have an account?</string>
