--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="navigation_drawer_open">Open Navigation</string>
     <string name="rewards">Rewards</string>
     <string name="greeting">Hello</string>
-    <string name="default_name">Joe</string>
+    <string name="default_name">Guest</string>
     <string name="profile_image">Profile Image</string>
     <string name="default_points">100 points</string>
     <string name="sorting_guide">Sorting Guide</string>
