--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="navigation_drawer_open">Open Navigation</string>
     <string name="rewards">Rewards</string>
     <string name="greeting">Hello</string>
-    <string name="default_name">Joe</string>
+    <string name="default_name"></string>
     <string name="profile_image">Profile Image</string>
     <string name="default_points">100 points</string>
     <string name="sorting_guide">Sorting Guide</string>
@@ -127,4 +127,6 @@
     <string name="type_barcode_button">type barcode button</string>
     <string name="guess_item">Guess Item</string>
     <string name="flash_on_and_off_button">Flash on and off button</string>
+
+    <string name="guest_login_registration_link">Login / Sign-up</string>
 </resources>
