--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="default_name"></string>
     <string name="profile_image">Profile Image</string>
     <string name="default_points">100 points</string>
+    <string name="real_points">points</string>
     <string name="sorting_guide">Sorting Guide</string>
     <string name="location">Location</string>
     <string name="scan">Scan</string>
