--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="points">points</string>
-    <string name="_100">100</string>
+    <string name="_100">0</string>
     <string name="map">Map</string>
     <string name="close_button">Close Button</string>
     <string name="logo">Logo</string>
@@ -129,4 +129,12 @@
     <string name="flash_on_and_off_button">Flash on and off button</string>
 
     <string name="guest_login_registration_link">Login / Sign-up</string>
+    <string name="popular_searches">Popular Searches</string>
+    <string name="more">More</string>
+    <string name="less">Less</string>
+    <string name="q4">Q4</string>
+    <string name="q3">Q3</string>
+    <string name="q2">Q2</string>
+    <string name="q1">Q1</string>
+    <string name="search_history">Search History</string>
 </resources>
