--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,4 +138,6 @@
     <string name="q2">Q2</string>
     <string name="q1">Q1</string>
     <string name="search_history">Search History</string>
+    <string name="next_collection">Next Collection</string>
+    <string name="schedule">Schedule</string>
 </resources>
