adjust home fragment to make it fit smaller screen better.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,5 @@
     <string name="search_history">Search History</string>
     <string name="next_collection">Next Collection</string>
     <string name="schedule">Schedule</string>
+    <string name="unit">Unit</string>
 </resources>
