--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,5 @@
     <string name="next_collection">Next Collection</string>
     <string name="schedule">Schedule</string>
     <string name="unit">Unit</string>
+    <string name="done">Done</string>
 </resources>
