--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="schedule">Schedule</string>
     <string name="unit">Unit</string>
     <string name="done">Done</string>
+    <string name="open_button">Open Button</string>
 </resources>
